<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeSearchActivity"
android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search"
        android:paddingVertical="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/find_a_recipe_for"/>

    <EditText
        android:id="@+id/search_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:layout_marginTop="24dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_category"
       android:layout_gravity="center_horizontal"
        android:layout_marginVertical="24dp"
        >
        <RadioButton
            android:id="@+id/meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meat"/>
        <RadioButton
            android:id="@+id/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk"/>
        <RadioButton
            android:id="@+id/parve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parve"/>
    </RadioGroup>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_recipes"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>